--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -2,6 +2,11 @@
 
 body {
     background-color: #34495e;
+    padding-top: 66px;
+}
+
+.text--white {
+    color: #ffffff;
 }
 
 .coinsList {
@@ -12,10 +17,57 @@ body {
         padding-right: 24px;
         border-bottom: 1px solid #2c3e50;
     }
+    .coinPrice,
     .coinName {
         color: #ffffff;
+        font-weight: bold;
         opacity: 0.8;
+        margin-bottom: 0!important;
     }
+    .coinPriceChange24h {
+        color: #2ecc71;
+        clear: right;
+    }
+    .media-content {
+        align-self: center;
+    }
+}
+
+.tabs {
+    background-color: #34495e;
+    border-bottom: 1px solid #2c3e50;
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 18%;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    a {
+        color: #ffffff;
+        padding: 0.2em 0em;
+    }
+}
+
+.tabs.is-toggle li.is-active a {
+    background-color: #3498db;
+    border-color: #3498db;
+}
+
+.settingsIcon {
+    height: 20px!important;
+}
+
+.showSettingsButton {
+    position: fixed;
+    top: 20px;
+    right: 0px;
+    text-align: center;
+    z-index: 2;
+    width: 18%;
+    height: 42px;
+    opacity: 0.8;
 }
 
 .addCoinButton {
