added basic settings page

--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -5,7 +5,7 @@
         <a id="market" class="navigationButton is-active" href="/market">Market</a>
       </li>
       <li>
-        <a id="portfolio" class="navigationButton" href="/portfolio">Portfolio</a>
+        <a id="portfolio" class="navigationButton toggle-balance" href="/portfolio">Portfolio</a>
       </li>
     </ul>
   </div>
