--- a/client/templates/portfolio/portfolio.html
+++ b/client/templates/portfolio/portfolio.html
@@ -1,5 +1,27 @@
 <template name="portfolio">
-  <div class="container">
-    <p>ALLOOOO</p>
-  </div>
+    <div class="container">
+        <ul class="coinsList">
+          {{#each arrayify coinsList}}
+          <li class="coin">
+            <article class="media">
+              <!--<div class="media-left">
+                <figure class="image">
+                  <img src="images/{{value.id}}.png" alt="{{value.name}}" />
+                </figure>
+              </div>-->
+              <div class="media-content">
+                <div class="content">
+                  <p class="coinName">{{value.name}}</p>
+                </div>
+              </div>
+              <div class="media-right">
+                  <div class="content">
+                      <input class="is-pulled-right has-text-right input portfolioInput" type="text" placeholder="0">
+                  </div>
+                </div>
+            </article>
+          </li>
+          {{/each}}
+        </ul>
+      </div>
 </template>
