--- a/client/templates/settings/settings.html
+++ b/client/templates/settings/settings.html
@@ -1,5 +1,11 @@
 <template name="settings">
   <div class="container">
-    <p>SETTIJGS</p>
+    <ul class="settingsList">
+      {{> theme}}
+      {{> currency}}
+      {{> precision}}
+      {{> language}}
+      {{> copyright}}
+    </ul>
   </div>
 </template>
