--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,35 +1,67 @@
 /* CSS declarations go here */
 
 body {
-    background-color: #34495e;
-    padding-top: 66px;
+    background-color: #2c3e50;
+    padding-top: 61px;
+    min-height: 100vh;
 }
 
 .text--white {
-    color: #ffffff;
+    color: rgba(255,255,255,0.9);
+}
+
+.balance {
+    display: none;
+    background-color: #2c3e50;
+    color: #3498db;
+    font-size: 3rem;
 }
 
 .coinsList {
+    .media {
+        min-height: 45px;
+    }
     .coin {
+        min-height: 66px;
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 24px;
         padding-right: 24px;
+        background-color: #34495e;
         border-bottom: 1px solid #2c3e50;
     }
     .coinPrice,
     .coinName {
-        color: #ffffff;
+        color: rgba(255,255,255,0.9);
         font-weight: bold;
-        opacity: 0.8;
         margin-bottom: 0!important;
     }
     .coinPriceChange24h {
         color: #2ecc71;
         clear: right;
     }
+    .media-right,
+    .media-left,
     .media-content {
         align-self: center;
+    }
+}
+
+.portfolioInput {
+    border: 1px solid #2c3e50;
+    background-color: #34495e;
+    color: rgba(255,255,255,0.9);
+    max-width: 50%;
+    height: auto;
+    transition: all 0.08s ease-in-out;
+    &:focus {
+        border-color: #3498db;
+    }
+    &:hover {
+        border-color: #3498db;
+    }
+    &:active {
+        border-color: #3498db;
     }
 }
 
@@ -45,7 +77,7 @@ body {
     padding-top: 14px;
     padding-bottom: 14px;
     a {
-        color: #ffffff;
+        color: rgba(255,255,255,0.9);
         padding: 0.2em 0em;
     }
 }
@@ -67,7 +99,35 @@ body {
     z-index: 2;
     width: 18%;
     height: 42px;
-    opacity: 0.8;
+}
+
+
+.settingsList {
+    .content {
+        color: rgba(255,255,255,0.9);
+    }
+    .media {
+        min-height: 45px;
+    }
+    .setting {
+        min-height: 66px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 24px;
+        padding-right: 24px;
+        background-color: #34495e;
+        border-bottom: 1px solid #2c3e50;
+    }
+    .settingName {
+        color: rgba(255,255,255,0.9);
+        font-weight: bold;
+        margin-bottom: 0!important;
+    }
+    .media-right,
+    .media-left,
+    .media-content {
+        align-self: center;
+    }
 }
 
 .addCoinButton {
@@ -79,15 +139,14 @@ body {
     width: 42px;
     height: 42px;
     border-radius: 42px;
-    color: #ffffff;
+    color: rgba(255,255,255,0.9);
     margin: auto;
     text-align: center;
     padding: 10px;
     font-size: 28px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
     span {
         top: -12px;
         position: relative;
-
     }
 }
