--- a/client/templates/balance/balance.html
+++ b/client/templates/balance/balance.html
@@ -1,7 +1,7 @@
 <template name="balance">
   <div class="container">
     <div class="balance has-text-centered">
-      <h4><sup>$</sup>{{balance}}</h4>
+      <h4>${{balance}}</h4>
     </div>
   </div>
 </template>
