--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -10,6 +10,10 @@ body {
     color: rgba(255,255,255,0.9);
 }
 
+.text--red {
+    color: #e74c3c!important;
+}
+
 .balance {
     display: none;
     background-color: #2c3e50;
@@ -17,12 +21,31 @@ body {
     font-size: 3rem;
 }
 
+.addCoin {
+    bottom: -65px;
+    background-color: #34495e;
+    border-top: 1px solid #2c3e50;
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    right: 0;
+    padding: 18%;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    opacity: 0;
+    transition: all 0.22s ease-in-out;
+}
+
+.addCoinOpened {
+    bottom: 0px;
+        opacity: 1;
+}
+
 .coinsList {
     .media {
         min-height: 45px;
     }
     .coinIcon {
-        height: 24px!important;
         width: 24px!important;
     }
     .coin {
@@ -57,7 +80,24 @@ body {
     color: rgba(255,255,255,0.9);
     max-width: 50%;
     height: auto;
-    transition: all 0.08s ease-in-out;
+    transition: all 0.14s ease-in-out;
+    &:focus {
+        border-color: #3498db;
+    }
+    &:hover {
+        border-color: #3498db;
+    }
+    &:active {
+        border-color: #3498db;
+    }
+}
+
+.addCoinInput {
+    border: 1px solid #2c3e50;
+    background-color: #34495e;
+    color: rgba(255,255,255,0.9);
+    height: auto;
+    transition: all 0.14s ease-in-out;
     &:focus {
         border-color: #3498db;
     }
@@ -149,8 +189,13 @@ body {
     padding: 10px;
     font-size: 28px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    transition: all 0.22s ease-in-out;
     span {
         top: -12px;
         position: relative;
     }
+}
+
+.addCoinButtonOpened {
+    bottom: 80px;
 }
