--- a/client/templates/coinsList/coinsList.html
+++ b/client/templates/coinsList/coinsList.html
@@ -20,6 +20,9 @@
                 <small class="coinPriceChange24h has-text-right is-pulled-right {{isNegative value.percent_change_24h}}">{{value.percent_change_24h}}%</small>
               </div>
             </div>
+            <div class="media-options">
+                <span>delete</span>
+            </div>
         </article>
       </li>
       {{/each}}
